--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Start</span> Bootstrap
+                    <i class="fa fa-play-circle"></i> <span class="light">! Start</span> LIKELION !
                 </a>
             </div>
 
@@ -56,7 +56,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#download">Visit</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -92,8 +92,9 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About MYSELF</h2>
                 <p> As you can see beyond this page, My name is YU GA EUL. I'm in attendance at Dongguk university. I major in Masscommunication & jounalism. I had to study one more year to enter the university. As much as I had tried, I enjoy college life.   </p>
-                <p>During college life, I found my hobby. Taking a photo. I love to taking and enjoying photos. You can see my photos in my <a href="https://www.instagram.com/u_autumn/">Instagram</a>. I has done lots of thing since entering universtiy. I work in 'HEAYUM SOCIAL INNOVATION' to create educational contents. Also I has volunteered at chlidren's center for 6 month. In additon, things I did when I was freshman make what I am now. </p>
-                <p>Above all, I learn computer programming with LIKELION. And this page is my first programming work.</p>
+                <p>During college life, I found my hobby. Taking a photo. I love to taking and enjoying photos. You can see my photos in my <a href="https://www.instagram.com/u_autumn/">Instagram</a>. In additon, I has done lots of things in freshman. Things I did make WHAT I AM NOW.  </p>
+                <p>Above all, I learn computer programming with " LIKELION ". 
+                And this page is MY FIRST programming work.</p>
             </div>
         </div>
     </section>
@@ -103,9 +104,10 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>VISITING AUTUMN'S</h2>
+                    <p>You can visit Autumn's page for free! You can see nice photos including scenery pic, personal pic, and selfie :) </p>
+                    <p> All photos are pictured by Gaeul.</p>
+                    <a href="https://www.instagram.com/u_autumn/" class="btn btn-default btn-lg">Visit Gaeul' Page</a>
                 </div>
             </div>
         </div>
@@ -116,18 +118,18 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <p>Feel free to email us to contact with me. When you want to say just hello, you can contact with me to visit GAEUL's Instagram, Github and Facebook. </p>
+                <p><a href="mailto:yugaeul0809@naver.com">yugaeul0809@naver.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://www.instagram.com/u_autumn/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                     </li>
                     <li>
                         <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://www.facebook.com/uautumn" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                 </ul>
             </div>
@@ -141,6 +143,7 @@
     <footer>
         <div class="container text-center">
             <p>Copyright &copy; Your Website 2016</p>
+            <p> CREATED BY AUTUMN, FOR LIKELION</p>
         </div>
     </footer>
 
