--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>VISITING AUTUMN'S</h2>
-                    <p>You can visit Autumn's page for free! You can see nice photos including scenery pic, personal pic, and selfie :) </p>
-                    <p> All photos are pictured by Gaeul.</p>
+                    <p>You can visit Autumn's page for free! You can see nice photos including scenery pic, personal pic, and selfie :) All photos are pictured by Gaeul.</p>
                     <a href="https://www.instagram.com/u_autumn/" class="btn btn-default btn-lg">Visit Gaeul' Page</a>
                 </div>
             </div>
@@ -117,8 +116,8 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to contact with me. When you want to say just hello, you can contact with me to visit GAEUL's Instagram, Github and Facebook. </p>
+                <h2>Contact GAEUL</h2>
+                <p>Feel free to email us to contact with me :p ! When you want to say just hello, you can contact with me to visit GAEUL's Instagram, Github and Facebook. </p>
                 <p><a href="mailto:yugaeul0809@naver.com">yugaeul0809@naver.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
